--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="full-date"></div>
 		</div>
-		<div class="top right">
+		<div class="top right weather-container">
 			<div class="current-temp-container">
 				<span class="current-temp"></span>ºF <span class="current-weather-icon"></span>
 			</div>
@@ -23,21 +23,24 @@
 				<span class="prob-rain"></span>% <span class="wi wi-umbrella"></span>
 			</div>
 			<hr class="weather-separator">
+			<div class="hourly-change-container"></div>
+			<hr class="weather-separator">
 			<div class="weekly-forecast-container"></div>
 		</div>
 		<div class="lower-third center-hor">
 			<div class="quote-content"></div>
 			<div class="quote-author"></div>
+			<hr class="marquee-divider">
 		</div>
-		<div class="bottom center-hor tickercontainer">
-			<ul class="newsticker"></ul>
+		<div class="bottom center-hor marquee-container">
+			<ul class="marquee"></ul>
 		</div>
 	</div>
 	
 	<script src="static/node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="static/js/jquery.marquee.min.js"></script>
 	<script src="static/js/config.js"></script>
-	<script src="static/js/icon-map.js"></script>
-	<script src="static/js/jquery.newsTicker.min.js"></script>
+	<script src="static/js/icon-map.js"></script>	
 	<script src="static/js/app.js"></script>
 </body>
 </html>
