--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="refresh" content="600">
 	<title>Magic Mirror</title>
 
 	<link rel="stylesheet" href="static/css/weather-icons.min.css">
@@ -28,9 +29,10 @@
 			<div class="weekly-forecast-container"></div>
 		</div>
 		<div class="lower-third center-hor">
+			<hr class="marquee-divider-top">
 			<div class="quote-content"></div>
 			<div class="quote-author"></div>
-			<hr class="marquee-divider">
+			<hr class="marquee-divider-bottom">
 		</div>
 		<div class="bottom center-hor marquee-container">
 			<ul class="marquee"></ul>
